DevOps/CI/manifest-main/prometheus/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: kube-mon
  annotations:
    prometheus.io/port: "9090"
    prometheus.io/scrape: "true"
spec: 
  ports:
  - name: prometheus-web
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
  sessionAffinity: None
  type: NodePort
